--- a/html/af1offwhiteyellow.html
+++ b/html/af1offwhiteyellow.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/sneakers.css">
-    <title>Document</title>
+    <title>NEWS</title>
 </head>
 
 <body>
@@ -19,10 +19,10 @@
             <nav>
                 <ul>
 
-                    <a href="index.html">
+                    <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <li>Sobre</li>
+                  <a href="sobre.html"><li>Sobre</li></a>
                     <a href="./cadastro.html">
                         <li>Cadastro</li>
                     </a>
