--- a/Site/public/dunklowpaulprimitive.html
+++ b/Site/public/dunklowpaulprimitive.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sneakers.css">
+    <link rel="stylesheet" href="css/sneakers.css">
     <title>NEWS</title>
 </head>
 
@@ -14,20 +14,18 @@
     <div class="cabecalho">
         <div class="caixa_cabecalho">
 
-            <img class="img_logo" src="/img/DROPMt.png" alt="LOGO">
+            <img class="img_logo" src="img/DROPMt.png" alt="LOGO">
 
             <nav>
                 <ul>
 
                    <a href="home.html"> <li>Home</li></a>
-                   <a href="sobre.html"><li>Sobre</li></a>
-                    <a href="./cadastro.html">
-                        <li>Cadastro</li>
+                   <a href="sobre2.html"><li>Sobre</li></a>
+                    <a href="index.html">
+                        <li>Sair</li>
                     </a>
 
-                    <a href="./login.html">
-                        <li>Login</li>
-                    </a>
+                
 
                 </ul>
             </nav>
@@ -52,12 +50,12 @@
                     será
                     de R$849,99.
                 </h3>
-                <img src="/img/dunkpaul1.PNG" alt="Dunk low What The P-Rod">
-                <img src="/img/dunkpaul2.PNG" alt="Dunk low What The P-Rod">
-                <img src="/img/dunkpaul3.PNG" alt="Dunk low What The P-Rod">
-                <img src="/img/dunkpaul4.PNG" alt="Dunk low What The P-Rod">
-                <img src="/img/dunkpaul5.PNG" alt="Dunk low What The P-Rod">
-                <img src="/img/dunkpaul6.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul1.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul2.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul3.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul4.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul5.PNG" alt="Dunk low What The P-Rod">
+                <img src="img/dunkpaul6.PNG" alt="Dunk low What The P-Rod">
             </div>
 
         </div>
