--- a/Site/public/home.html
+++ b/Site/public/home.html
@@ -19,7 +19,7 @@
                 <ul>
 
                     <li class="item_cor">Home</li>
-
+                    <a href="./sobre2.html">     <li >Sobre</li> </a>
                     <a href="./index.html">
                         <li>Sair</li>
                     </a>
