--- a/Site/public/dunkscraparcheobrown.html
+++ b/Site/public/dunkscraparcheobrown.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sneakers.css">
+    <link rel="stylesheet" href="css/sneakers.css">
     <title>NEWS</title>
 </head>
 
@@ -14,7 +14,7 @@
     <div class="cabecalho">
         <div class="caixa_cabecalho">
 
-            <img class="img_logo" src="/img/DROPMt.png" alt="LOGO">
+            <img class="img_logo" src="img/DROPMt.png" alt="LOGO">
 
             <nav>
                 <ul>
@@ -22,14 +22,11 @@
                     <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <a href="sobre.html"><li>Sobre</li></a>
-                    <a href="./cadastro.html">
-                        <li>Cadastro</li>
+                    <a href="sobre2.html"><li>Sobre</li></a>
+                    <a href="index.html">
+                        <li>Sair</li>
                     </a>
 
-                    <a href="./login.html">
-                        <li>Login</li>
-                    </a>
 
                 </ul>
             </nav>
@@ -56,12 +53,12 @@
                     estavam no canto do estúdio. Podemos ver desde malha, couro até camurça
                     e cores que variam do verde, amarelo até o rosa e roxo.
                 </h3>
-                <img src="/img/dunkscrap1.PNG" alt="Nike Dunk Scrap Archeo Brown">
-                <img src="/img/dunkscrap2.PNG" alt="Nike Dunk Scrap Archeo Brown">
-                <img src="/img/dunkscrap3.PNG" alt="Nike Dunk Scrap Archeo Brown">
-                <img src="/img/dunkscrap4.PNG" alt="Nike Dunk Scrap Archeo Brown">
-                <img src="/img/dunkscrap5.PNG" alt="Nike Dunk Scrap Archeo Brown">
-                <img src="/img/dunkscrap6.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap1.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap2.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap3.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap4.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap5.PNG" alt="Nike Dunk Scrap Archeo Brown">
+                <img src="img/dunkscrap6.PNG" alt="Nike Dunk Scrap Archeo Brown">
             </div>
 
         </div>
