--- a/Site/public/jordan1multcolor.html
+++ b/Site/public/jordan1multcolor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sneakers.css">
+    <link rel="stylesheet" href="css/sneakers.css">
     <title>NEWS</title>
 </head>
 
@@ -22,13 +22,9 @@
                     <a href="home.html">
                         <li>Home</li>
                     </a>
-                    <a href="sobre.html"><li>Sobre</li></a>
-                    <a href="./cadastro.html">
-                        <li>Cadastro</li>
-                    </a>
-
-                    <a href="./login.html">
-                        <li>Login</li>
+                    <a href="sobre2.html"><li>Sobre</li></a>
+                    <a href="index.html">
+                        <li>Sair</li>
                     </a>
 
                 </ul>
@@ -55,13 +51,13 @@
                     exata que ainda será divulgada. Fique ligado em nosso site e em nossas redes sociais para não perder
                     nenhum detalhe sobre essa edição!
                 </h3>
-                <img src="/img/aj1midmultcolor1.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor2.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor3.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor4.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor7.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor5.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
-                <img src="/img/aj1midmultcolor6.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor1.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor2.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor3.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor4.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor7.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor5.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
+                <img src="img/aj1midmultcolor6.PNG" alt="Air Jordan 1 Mid Heat-Reactive">
                 
             </div>
 
