--- a/Site/public/cadastro.html
+++ b/Site/public/cadastro.html
@@ -78,11 +78,15 @@
         </form>
 
         </div>
+        <div class="div_img">
+            <img class="img_logo2" src="img/DROPMt.png" alt="Logo">
+        </div>
+        
 
     </div>
     
 
-    <img class="img_logo2" src="img/DROPMt.png" alt="Logo">
+   
 
     <div class="rodape">
 
